--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,7 +23,7 @@ env:
 jobs:
   build:
 
-    runs-on: [self-hosted]
+    runs-on: [arc-runner-set]
     permissions:
       contents: read
       packages: write
@@ -57,7 +57,4 @@ jobs:
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/tms/odoo:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-          
+          tags: ${{ env.REGISTRY }}/tms/odoo:latest          
